# slack-bot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DEPENDENCIES.md  README.md  manifest.json  nancy_bot.py  pyproject.toml  pytest.ini  test_simple_retrieval.py  test_slack_dm.py  test_tgt_vis2.txt  test_txtai_direct.py  test_txtai_simple.py
bot/: __init__.py  rag_service.py
bot/home/: blockkit_home.json
bot/plugins/llm/: llm_service.py  system_prompt.txt  tools.py
bot/plugins/rag/: rag_service.py
bot/utils/: __init__.py  conversation.py  interactive_handler.py  message_handler.py  rate_limiter.py  slack_client.py
config/: articles.yml  model_weights.yaml  pyragify_microlens_submit_microlens-submit.yaml  repositories.yml  weights.yaml
docs/: RATE_LIMITING.md  TODO.md
scripts/: README.md  articles_README.md  build_knowledge_base.py  demo_query.py  manage_articles.py  manage_pdf_articles.py  manage_repositories.py  pdf_utils.py  refresh_knowledge_base.py
tests/: __init__.py  conftest.py  inspect_chunks.py  payload_0.json  payload_1.json  payload_2.json  payload_3.json  payload_4.json  requirements-dev.txt  test-config.yaml  test-env.yml  test_build_knowledge_base.py  test_cli.py  test_converter.py  test_llm_service.py  test_pipe.py  test_rag_service.py  test_simple_retrieval.py
